infra/terraform/vpc.tf
// Creates VPC
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = var.vpc_enable_dns_support
  enable_dns_hostnames = var.vpc_enable_dns_hostnames

}

// Creates Subnet for VPC
resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnet_cidr
  availability_zone       = var.availability_zone
  map_public_ip_on_launch = true
}

// Creates Internet Gateway for VPC
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
}

// Creates Route Table for Internet Gateway
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = var.public_route_config.cidr_block
    gateway_id = aws_internet_gateway.igw.id
  }
}

// Associates the route table with public subnet
resource "aws_route_table_association" "public_assoc" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

// VPC link for api gateway and alb
resource "aws_vpc_link" "quizx_vpc_link" {
  name        = "quizx-vpc-link"
  subnet_ids = [aws_subnet.public.id]
  security_group_ids = [aws_security_group]
}
